# charon

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  my.fasta  version.h.in
.github/workflows/: docker_push.yml
cmake/: GenerateVersion.cmake  package-lock.cmake
include/: classify_arguments.hpp  classify_main.hpp  classify_stats.hpp  counts.hpp  dehost_arguments.hpp  dehost_main.hpp  entry.hpp  global.hpp  index.hpp  index_arguments.hpp  index_main.hpp  input_stats.hpp  input_summary.hpp  load_index.hpp  read_entry.hpp  result.hpp  store_index.hpp  utils.hpp  version.h  version.h.in  version.hpp
scratch/: my_app.cpp
src/: classify_main.cpp  dehost_main.cpp  index_main.cpp  load_index.cpp  main.cpp  my_app.cpp  utils.cpp
